[package]
name = "traindet"
version = "0.1.0"
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>"]
edition = "2018"

[dependencies]
bzip2 = "0.3.3"
unicode_reader = "0.1.1"
unic-normal = "0.9.0"
detone = "1.0.0"
detector_char_classes = { path = "../detector_char_classes" }
rayon = "1.0.3"

[dependencies.encoding_rs]
version = "0.8.17"
features = ["fast-legacy-encode"]

[profile.dev]
panic = "abort"